--- a/ewm-main-service/Dockerfile
+++ b/ewm-main-service/Dockerfile
@@ -1,3 +1,3 @@
-FROM amazoncorretto:11-alpine-jdk
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM amazoncorretto:11.0.19
+COPY target/*.jar ewm-service.jar
+ENTRYPOINT ["java","-jar","/ewm-service.jar"]
