--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,48 +2,45 @@ version: '3.1'
 services:
   stats-server:
     build: ewm-stats-service/server
+    image: stats-server
     container_name: stats-server
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
+      - STATS_SERVER_URL=http://server:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/postgres
 
   stats-db:
-    image: postgres:14-alpine
-    volumes:
-      - /var/lib/postgresql/data/
+    image: postgres:15
     container_name: stats-db
     ports:
       - "6541:5432"
     environment:
-      - POSTGRES_DB=ewm-stats
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: iamroot
 
   ewm-service:
     build: ewm-main-service
-    container_name: main-service
+    image: ewm-service
+    container_name: ewm-service
     ports:
       - "8080:8080"
     depends_on:
+      - stats-server
       - ewm-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
+      - EWM_SERVICE_URL=http://server:8080
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5433/postgres
 
   ewm-db:
-    image: postgres:14-alpine
-    volumes:
-      - /var/lib/postgresql/data/
-    container_name: db_main
+    image: postgres:15
+    container_name: ewm-db
     ports:
-      - "6542:5432"
+      - "6542:5433"
     environment:
-      - POSTGRES_DB=ewm-main
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: iamroot
