--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
 
   stats-db:
     image: postgres:14-alpine
+    healthcheck:
+      test: "pg_isready --username=postgres && psql --username=postgres --list"
+      timeout: 10s
+      retries: 20
     volumes:
       - /var/lib/postgresql/data/
     container_name: stats-db
@@ -38,6 +42,10 @@ services:
 
   ewm-db:
     image: postgres:14-alpine
+    healthcheck:
+      test: "pg_isready --username=postgres && psql --username=postgres --list"
+      timeout: 10s
+      retries: 20
     volumes:
       - /var/lib/postgresql/data/
     container_name: db_main
