--- a/ewm-main-service/pom.xml
+++ b/ewm-main-service/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>ewm-service</artifactId>
+    <artifactId>ewm-main-service</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -62,6 +62,10 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
         </dependency>
     </dependencies>
 
