--- a/ewm-stats-service/server/src/main/resources/application.properties
+++ b/ewm-stats-service/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8080
-
+server.port=9090
+spring.data.jpa.repositories.bootstrap-mode = lazy
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.show_sql=true
@@ -12,7 +12,7 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=iamroot
 #---
