--- a/ewm-main-service/Dockerfile
+++ b/ewm-main-service/Dockerfile
@@ -1,3 +1,4 @@
-FROM amazoncorretto:11-alpine-jdk
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM amazoncorretto:11.0.19
+COPY target/*.jar stats-server.jar
+ENTRYPOINT ["java","-jar","/ewm-main-server.jar"]
+
