--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,46 @@
-version: '3.1'
+version: '3.8'
 services:
   stats-server:
-    build: ewm-stats-service/server
-    image: ewm-stats-service
-    container_name: ewm-stats-service
+    build: ewm-stats-service/stats-server
+    container_name: stats_container
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
     environment:
-      - EWM_STATS_SERVER_URL=http://server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/postgres
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats-service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
   stats-db:
-    image: postgres:15
-    container_name: stats-db
+    image: postgres:14.6-alpine
+    container_name: stats_db
     ports:
       - "6541:5432"
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: iamroot
+      - POSTGRES_DB=ewm-stats-service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
-  ewm-service:
-    build: ewm-main-service
+  main-service:
+    build: ./ewm-main-service
     image: ewm-main-service
     container_name: ewm-main-service
     ports:
       - "8080:8080"
     depends_on:
-      - stats-server
-      - ewm-db
+      - db-main
     environment:
-      - EWM_MAIN_SERVICE_URL=http://server:8080
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5433/postgres
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db-main:5432/main_service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
-  ewm-db:
-    image: postgres:15
-    container_name: ewm-db
+  db-main:
+    image: postgres:14.4-alpine
+    container_name: main_service_db
     ports:
-      - "6542:5433"
+      - "6432:5432"
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: iamroot
+      - POSTGRES_DB=ewm-main-service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
