--- a/ewm-main-service/Dockerfile
+++ b/ewm-main-service/Dockerfile
@@ -1,4 +1,3 @@
-FROM amazoncorretto:11.0.19
-COPY target/*.jar stats-server.jar
-ENTRYPOINT ["java","-jar","/ewm-main-server.jar"]
-
+FROM amazoncorretto:11-alpine-jdk
+COPY target/*.jar main-service.jar
+ENTRYPOINT ["java","-jar","/ewm-main-service.jar"]
