--- a/ewm-stats-service/server/src/main/resources/application.properties
+++ b/ewm-stats-service/server/src/main/resources/application.properties
@@ -1,25 +1,19 @@
 server.port=9090
-spring.data.jpa.repositories.bootstrap-mode=lazy
-spring.jpa.hibernate.ddl-auto=none
+server.uri=http://statsResponse-server:9090
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-
+#---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/statsResponse
 spring.datasource.username=postgres
 spring.datasource.password=iamroot
 #---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:explore-with-me
-#spring.datasource.username=test
-#spring.datasource.password=test
-
-spring.h2.console.enabled=true
