--- a/ewm-stats-service/pom.xml
+++ b/ewm-stats-service/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ewm-statsResponse-service</artifactId>
+    <artifactId>ewm-stats-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
