--- a/ewm-stats-service/server/src/main/resources/application.properties
+++ b/ewm-stats-service/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-server.uri=http://statsResponse-server:9090
+server.uri=http://stats-server:9090
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -13,7 +13,7 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/statsResponse
+spring.datasource.url=jdbc:postgresql://localhost:5432/stats
 spring.datasource.username=postgres
-spring.datasource.password=iamroot
+spring.datasource.password=1234
 #---
