--- a/ewm-stats-service/server/pom.xml
+++ b/ewm-stats-service/server/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>ewm-statsResponse-service</artifactId>
+        <artifactId>ewm-stats-service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -62,7 +62,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>ru.practicum.StatsServer</mainClass>
+                    <mainClass>ru.practicum.ServerApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
