--- a/ewm-main-service/src/main/resources/application.properties
+++ b/ewm-main-service/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-main
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-main-service
 spring.datasource.username=root
 spring.datasource.password=root
