--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.1'
 services:
   stats-server:
     build: ewm-stats-service/server
@@ -9,38 +9,49 @@ services:
       - stats-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats-service
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=iamroot
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
 
   stats-db:
-    image: postgres:14.6-alpine
-    container_name: stats_db
+    image: postgres:14-alpine
+    healthcheck:
+      test: "pg_isready --username=postgres && psql --username=postgres --list"
+      timeout: 10s
+      retries: 20
+    volumes:
+      - /var/lib/postgresql/data/
+    container_name: stats-db
     ports:
       - "6541:5432"
     environment:
       - POSTGRES_DB=ewm-stats-service
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=iamroot
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
 
-  main-service:
-    build: ./ewm-main-service
-    image: ewm-main-service
+  ewm-service:
+    build: ewm-main-service
     container_name: ewm-main-service
     ports:
       - "8080:8080"
     depends_on:
-      - db-main
+      - ewm-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db-main:5432/ewm-main-service
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=iamroot
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main-service
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
 
-  db-main:
-    image: postgres:14.4-alpine
-    container_name: main_service_db
+  ewm-db:
+    image: postgres:14-alpine
+    healthcheck:
+      test: "pg_isready --username=postgres && psql --username=postgres --list"
+      timeout: 10s
+      retries: 20
+    volumes:
+      - /var/lib/postgresql/data/
+    container_name: db_main
     ports:
-      - "6432:5432"
+      - "6542:5432"
     environment:
       - POSTGRES_DB=ewm-main-service
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=iamroot
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
