--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,46 @@
-version: '3.1'
+version: '3.8'
 services:
   stats-server:
     build: ewm-stats-service/server
-    container_name: stats-server
+    container_name: ewm-stats-service
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats-service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
   stats-db:
-    image: postgres:14-alpine
-    volumes:
-      - /var/lib/postgresql/data/
-    container_name: stats-db
+    image: postgres:14.6-alpine
+    container_name: stats_db
     ports:
       - "6541:5432"
     environment:
-      - POSTGRES_DB=ewm-stats
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=ewm-stats-service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
-  ewm-service:
-    build: ewm-main-service
-    container_name: main-service
+  main-service:
+    build: ./main-service
+    image: main-service-image
+    container_name: main_service_container
     ports:
       - "8080:8080"
     depends_on:
-      - ewm-db
+      - db-main
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db-main:5432/main_service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
-  ewm-db:
-    image: postgres:14-alpine
-    volumes:
-      - /var/lib/postgresql/data/
-    container_name: db_main
+  db-main:
+    image: postgres:14.4-alpine
+    container_name: main_service_db
     ports:
-      - "6542:5432"
+      - "6432:5432"
     environment:
-      - POSTGRES_DB=ewm-main
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=main_service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
