проверка почти готово

--- a/stats/client/pom.xml
+++ b/stats/client/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stats-client</artifactId>
+    <artifactId>client</artifactId>
 
     <dependencies>
         <dependency>
