--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -14,9 +14,9 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>stats-server</module>
-        <module>stats-client</module>
-        <module>stats-dto</module>
+        <module>server</module>
+        <module>client</module>
+        <module>dto</module>
     </modules>
 
     <properties>
