--- a/stats/server/pom.xml
+++ b/stats/server/pom.xml
@@ -11,12 +11,12 @@
 
     <artifactId>stats-server</artifactId>
 
-    <name>stats-server</name>
+    <name>server</name>
 
     <dependencies>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>stats-dto</artifactId>
+            <artifactId>dto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
